@@ -449,6 +449,8 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|hbase
+operator|.
 name|ipc
 operator|.
 name|VersionedProtocol
