@@ -717,6 +717,24 @@ name|server
 operator|.
 name|namenode
 operator|.
+name|LeaseManager
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|server
+operator|.
+name|namenode
+operator|.
 name|NameNode
 import|;
 end_import
@@ -6413,9 +6431,39 @@ argument_list|(
 name|nn
 argument_list|)
 decl_stmt|;
+name|field
+operator|=
 name|namesystem
 operator|.
-name|leaseManager
+name|getClass
+argument_list|()
+operator|.
+name|getDeclaredField
+argument_list|(
+literal|"leaseManager"
+argument_list|)
+expr_stmt|;
+name|field
+operator|.
+name|setAccessible
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|LeaseManager
+name|lm
+init|=
+operator|(
+name|LeaseManager
+operator|)
+name|field
+operator|.
+name|get
+argument_list|(
+name|namesystem
+argument_list|)
+decl_stmt|;
+name|lm
 operator|.
 name|setLeasePeriod
 argument_list|(
