@@ -1614,9 +1614,7 @@ name|void
 name|test_TIMERANGE
 parameter_list|()
 throws|throws
-name|IOException
-throws|,
-name|InterruptedException
+name|Exception
 block|{
 name|Configuration
 name|conf
@@ -1689,17 +1687,9 @@ argument_list|)
 expr_stmt|;
 name|context
 operator|=
-operator|new
-name|TaskAttemptContext
+name|getTestTaskAttemptContext
 argument_list|(
 name|job
-operator|.
-name|getConfiguration
-argument_list|()
-argument_list|,
-operator|new
-name|TaskAttemptID
-argument_list|()
 argument_list|)
 expr_stmt|;
 name|HFileOutputFormat
