@@ -451,6 +451,8 @@ Release 0.91.0 - Unreleased
    HBASE-3857  Change the HFile Format (Mikhail & Liyin)
    HBASE-4114  Metrics for HFile HDFS block locality (Ming Ma)
    HBASE-4176  Exposing HBase Filters to the Thrift API (Anirudh Todi)
+   HBASE-4221  Changes necessary to build and run against Hadoop 0.23
+               (todd)
 
 Release 0.90.5 - Unreleased
 
